
using NUnit.Framework.Constraints;

public class Const
{
    public struct PlayerAnimation
    {
        public const string IS_MOVE = "IsMoving";

        public const string IS_JUMPING = "IsJumping";

        public const string IS_SLIDING = "IsSliding";

        public const string IS_SLIDING_ACTIVE = "IsSlidingActive";

    }
    public struct WeathTypes
    {

     public const string GOLD_WHEATH = "GoldWheat";

     public const string HOLY_WHEATH = "HolyWheat";

      public const string ROTTEN_WHEATH = "RottenWheat";

    }
    

}
